--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -1,21 +1,9 @@
 server:
-  port: 8080
+  port: ${PORT:${SERVER_PORT:0}}
 
 spring:
   application:
-    name: gateway
-
-  cloud:
-    gateway:
-      discovery:
-        locator:
-          enabled: true
-      routes:
-        - id: catalogRoute
-          uri: lb://movie-service/
-          predicates:
-            - Path=/catalog/**
-      
+    name: catalog-service
 eureka:
   client:
     register-with-eureka: true
